Only install ara for enterprise version

--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -62,6 +62,9 @@
     - ecp_sas
     
 - name: Create ara service
+  when:
+    - ecp is defined
+    - ecp | bool
   import_tasks: ara.yml
   tags:
     - ecp_ara
