--- a/roles/ecp/tasks/appstore.yml
+++ b/roles/ecp/tasks/appstore.yml
@@ -21,7 +21,15 @@
     - ecp is defined
     - ecp | bool
   copy:
-    src: "{{ ecp_local_charts }}"
+    src: "{{ ecp_local_charts }}/local"
+    dest: "{{ kube_ecp_dir }}/repository/"
+	
+- name: Copy ecp chart images
+  when:
+    - ecp is defined
+    - ecp | bool
+  copy:
+    src: "{{ ecp_local_charts }}/image"
     dest: "{{ kube_ecp_dir }}/repository/"
 
 - name: Copy appstore yaml file
