--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -70,7 +70,7 @@ lyra_image: rivernet/lyra:4.1
 mysql_image: rivernet/mysql-sky:4.1
 # prometheus
 grafana_image: rivernet/grafana-sky:4.1
-curl_image: rivernet/curl:ubuntu-precise
+curl_image: rivernet/curl
 kubestatemetrics_image: rivernet/kube-state-metrics:v0.5.0
 nodeexporter_image: rivernet/node-exporter:0.12.0
 kubeapiexporter_image: rivernet/kube-api-exporter:master-2fe5dfb
