--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -10,5 +10,5 @@ kube_ecp_dir: /etc/kubernetes/ecp
 kubeadm_config: /etc/kubernetes/kubeadm.yaml
 kube_glusterfs_dir: /etc/kubernetes/glusterfs
 kube_harbor_dir: /etc/kubernetes/harbor
-ecp_image_dir: /opt/image
-ecp_rpm_dir: /opt/rpm
+image_tars_dir: /opt/image_tars
+rpm_dir: /opt/rpm
