--- a/roles/ecp/tasks/appstore.yml
+++ b/roles/ecp/tasks/appstore.yml
@@ -21,7 +21,7 @@
     - ecp is defined
     - ecp | bool
   copy:
-    src: "{{ ecp_local_charts }}/local"
+    src: "{{ ecp_local_charts_repo }}/local"
     dest: "{{ kube_ecp_dir }}/repository/"
 
 - name: Copy ecp chart images
@@ -29,7 +29,7 @@
     - ecp is defined
     - ecp | bool
   copy:
-    src: "{{ ecp_local_charts }}/image"
+    src: "{{ ecp_local_charts_repo }}/image"
     dest: "{{ kube_ecp_dir }}/repository/"
 
 - name: Copy appstore yaml file
