--- a/roles/kubernetes/tasks/offline.yml
+++ b/roles/kubernetes/tasks/offline.yml
@@ -1,10 +1,10 @@
 - name: Create rpm directory
-  file: path={{ ecp_rpm_dir }} state=directory
+  file: path={{ rpm_dir }} state=directory
 
 - name: Copy rpm files to all hosts
   synchronize:
-    src: "{{ ecp_rpms }}"
-    dest: "{{ ecp_rpm_dir }}"
+    src: "{{ src_rpms_dir }}/"
+    dest: "{{ rpm_dir }}"
     checksum: yes
 
 - name: Install offline package
@@ -14,9 +14,10 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - "{{ ecp_rpm_dir }}/yum-plugin-versionlock-1.1.31-42.el7.noarch.rpm"
-    - "{{ ecp_rpm_dir }}/kubectl-{{ yum_kubectl_version }}.x86_64.rpm"
-    - "{{ ecp_rpm_dir }}/kubelet-{{ yum_kubelet_version }}.x86_64.rpm"
-    - "{{ ecp_rpm_dir }}/kubernetes-cni-{{ yum_kubernetes_cni_version }}.x86_64.rpm"
-    - "{{ ecp_rpm_dir }}/kubeadm-{{ yum_kubeadm_version }}.x86_64.rpm"
+    - "{{ rpm_dir }}/yum-plugin-versionlock-1.1.31-42.el7.noarch.rpm"
+    - "{{ rpm_dir }}/socat-1.7.3.2-2.el7.x86_64.rpm"
+    - "{{ rpm_dir }}/kubernetes-cni-{{ yum_kubernetes_cni_version }}.x86_64.rpm"
+    - "{{ rpm_dir }}/kubectl-{{ yum_kubectl_version }}.x86_64.rpm"
+    - "{{ rpm_dir }}/kubelet-{{ yum_kubelet_version }}.x86_64.rpm"
+    - "{{ rpm_dir }}/kubeadm-{{ yum_kubeadm_version }}.x86_64.rpm"
 
