--- a/roles/prerequisite/tasks/software.yml
+++ b/roles/prerequisite/tasks/software.yml
@@ -15,3 +15,10 @@
     state: present
   with_items: "{{ required_softwares }}"
 
+- name: Copy jq binary
+  copy:
+    src: "../binary/jq-linux64"
+    dest: "/usr/bin/jq"
+    mode: 0755
+
+
