--- a/scaleup.yml
+++ b/scaleup.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: new_nodes
+- hosts: new_workers
   gather_facts: no
   become: yes
   roles:
-    - { role: node, tags: node }
+    - { role: worker, tags: worker }
 
