--- a/roles/prerequisite/tasks/cluster_image.yml
+++ b/roles/prerequisite/tasks/cluster_image.yml
@@ -13,3 +13,6 @@
   with_filetree: "{{ image_tars_dir }}/cluster"
   when:
     - item.state == 'file'
+
+- name: Remove cluster docker image tars
+  file: path="{{ image_tars_dir }}/cluster" state=absent
