--- a/roles/prerequisite/tasks/glusterfs_image.yml
+++ b/roles/prerequisite/tasks/glusterfs_image.yml
@@ -18,3 +18,6 @@
 - name: Retag heketi image
   shell: |
     docker tag {{ heketi_image }} docker.io/heketi/heketi:dev
+
+- name: Remove glusterfs docker image tars
+  file: path="{{ image_tars_dir }}/glusterfs" state=absent
