--- a/roles/prerequisite/tasks/management_image.yml
+++ b/roles/prerequisite/tasks/management_image.yml
@@ -14,3 +14,6 @@
   with_filetree: "{{ image_tars_dir }}/management"
   when:
     - item.state == 'file'
+
+- name: Remove management docker image tars
+  file: path="{{ image_tars_dir }}/management" state=absent
