--- a/roles/ecp/tasks/appstore.yml
+++ b/roles/ecp/tasks/appstore.yml
@@ -77,16 +77,16 @@
             create -f {{ kube_ecp_dir }}/appstore/helm_rudder.yaml
   run_once: true
 
-- name: Check if tiller service account already exists
+- name: Check if appstore service account already exists
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
-            get sa --namespace=kube-system | grep tiller
+            get sa --namespace=kube-system | grep appstore
   run_once: true
-  register: check_tiller_sa
-  failed_when: check_tiller_sa.rc != 0 and check_tiller_sa.rc != 1
+  register: check_appstore_sa
+  failed_when: check_appstore_sa.rc != 0 and check_appstore_sa.rc != 1
 
 - name: Create RBAC
-  when: check_tiller_sa.rc != 0
+  when: check_appstore_sa.rc != 0
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             create -f {{ kube_ecp_dir }}/appstore/appstore-k8s-rbac.yaml
