--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,27 +1,17 @@
 ---
 
-- name: Install Docker container engine
-  include: pkg.yml
+- name: Install binaries online
+  import_tasks: online.yml
+  when: offline is not defined or not offline | bool
 
-- name: Copy Docker engine service file
-  register: change_docker
-  template:
-    src: "docker.service.j2"
-    dest: "{{ systemd_dir }}/docker.service"
-    owner: root
-    group: root
-    mode: 0755
+- name: Install binaries offline
+  import_tasks: offline.yml
+  when:
+    - offline is defined
+    - offline | bool
 
 - name: Copy Docker environment config file
   template: src=docker.j2 dest={{ system_env_dir }}/docker
-
-- name: Add any insecure registrys to Docker config
-  when: insecure_registrys is defined and insecure_registrys > 0
-  lineinfile: dest={{ system_env_dir }}/docker regexp=^INSECURE_REGISTRY= line=INSECURE_REGISTRY="{% for reg in insecure_registrys %}--insecure-registry={{ reg }} {% endfor %}"
-
-- name: Add registry to Docker config
-  when: add_registry is defined and add_registry > 0
-  lineinfile: dest={{ system_env_dir }}/docker regexp=^ADD_REGISTRY= line=ADD_REGISTRY="{% for reg in add_registry %}--add-registry={{ reg }} {%endfor %}"
 
 - name: Enable and restart Docker engine
   systemd:
