--- a/roles/glusterfs/tasks/offline.yml
+++ b/roles/glusterfs/tasks/offline.yml
@@ -1,4 +1,13 @@
 ---
+- name: Create rpm directory
+  file: path={{ rpm_dir }} state=directory
+
+- name: Copy rpm files to all hosts
+  synchronize:
+    src: "{{ glusterfs_rpms_dir }}/"
+    dest: "{{ rpm_dir }}"
+    checksum: yes
+
 - name: Install offline package
   when:
     - ansible_os_family == "RedHat"
