--- a/roles/harbor/tasks/harbor.yml
+++ b/roles/harbor/tasks/harbor.yml
@@ -9,7 +9,7 @@
 
 - name: Login to harbor registry
   shell: |
-    docker login -u admin -p password registry.harbor:5000
+    docker login -u admin -p password {{ insecure_registry }}
   register: login_to_harbor_registry
   until: login_to_harbor_registry.rc == 0
   retries: 20
