--- a/roles/destroy/tasks/main.yml
+++ b/roles/destroy/tasks/main.yml
@@ -55,6 +55,17 @@
     - /var/run/calico
     - /etc/systemd/system/kubelet.service.d/
   ignore_errors: True
+  
+- name: Umount ECP share directory
+  shell: |
+    umount {{ ecp_share_dir }}
+  ignore_errors: True
+  
+- name: Remove ECP share directory
+  file: path={{item}} state=absent
+  with_items:
+    - "{{ ecp_share_dir }}"
+  ignore_errors: True
 
 - name: Remove GlusterFS directory
   file: path={{item}} state=absent
