--- a/roles/ecp/tasks/prometheus.yml
+++ b/roles/ecp/tasks/prometheus.yml
@@ -6,55 +6,43 @@
   template: src={{ item }} dest={{ kube_ecp_dir }}/prometheus/{{ item | basename | regex_replace('\.j2', '') }}
   with_fileglob:
     - ../templates/prometheus/*.j2
-
-- name: Get the prometheus host
-  shell: |
-    kubectl --kubeconfig={{ kubeadmin_config }} \
-            get nodes --no-headers=true -l prometheus=yes | awk '{print $1}'
-  register: get_prometheus_host
-
-- set_fact: prometheus_host={{ get_prometheus_host.stdout }}
-
-- name: Create repository directory on prometheus host
-  file: path=/opt/prometheus_config state=directory
+    
+- name: Create repository directory
+  file: path={{ ecp_share_dir }}/prometheus/config state=directory
   run_once: true
-  delegate_to: "{{ prometheus_host }}"
 
 - slurp:
     src: "{{ kube_ecp_dir }}/prometheus/prometheus.yml"
   register: prometheus
 
-- name: Create prometheus configuration on prometheus host
+- name: Create prometheus configuration
   copy:
-    dest: /opt/prometheus_config/prometheus.yml
+    dest: "{{ ecp_share_dir }}/prometheus/config/prometheus.yml"
     content: "{{ prometheus.content | b64decode }}"
     mode: 0644
   run_once: true
-  delegate_to: "{{ prometheus_host }}"
 
 - slurp:
     src: "{{ kube_ecp_dir }}/prometheus/prometheus-record.rules"
   register: prometheus_record_rules
 
-- name: Create prometheus record rules on prometheus host
+- name: Create prometheus record rules
   copy:
-    dest: /opt/prometheus_config/prometheus-record.rules
+    dest: "{{ ecp_share_dir }}/prometheus/config/prometheus-record.rules"
     content: "{{ prometheus_record_rules.content | b64decode }}"
     mode: 0644
   run_once: true
-  delegate_to: "{{ prometheus_host }}"
 
 - slurp:
     src: "{{ kube_ecp_dir }}/prometheus/app-record.rules"
   register: app_record_rules
 
-- name: Create app record rules on prometheus host
+- name: Create app record rules
   copy:
-    dest: /opt/prometheus_config/app-record.rules
+    dest: "{{ ecp_share_dir }}/prometheus/config/app-record.rules"
     content: "{{ app_record_rules.content | b64decode }}"
     mode: 0644
   run_once: true
-  delegate_to: "{{ prometheus_host }}"
   
 - name: Check if prometheus service account already exists
   shell: |
