--- a/roles/glusterfs/tasks/online.yml
+++ b/roles/glusterfs/tasks/online.yml
@@ -13,6 +13,15 @@
     state: present
   with_items:
     - glusterfs-client
+    
+- name: Install nfs client
+  when: ansible_os_family == "RedHat"
+  yum:
+    name: "{{ item }}"
+    update_cache: yes
+    state: present
+  with_items:
+    - nfs-utils
 
 - name: Install glusterfs client
   when: ansible_os_family == "Debian"
