--- a/roles/cni/tasks/main.yml
+++ b/roles/cni/tasks/main.yml
@@ -1,50 +1,4 @@
 ---
-
-- name: "Set fact {{ network }} cni variable"
-  set_fact:
-    cni: "{{ vars[network] }}"
-
-- name: Create Kubernetes addon directory
-  file: path={{ network_dir }} state=directory
-
-- name: "Copy {{ cni.name }} RBAC yml file"
-  template: src="{{ cni.template.rbac }}.j2" dest={{ network_dir }}/{{ cni.template.rbac }}
-
-- name: "Copy {{ cni.name }} yml file"
-  template: src="{{ cni.template.ds }}.j2" dest={{ network_dir }}/{{ cni.template.ds }}
-
-- name: "Check {{ cni.name }} cluster role already exists"
-  shell: |
-    kubectl --kubeconfig={{ kubeadmin_config }} \
-            get clusterrole | grep {{ cni.name }}
+- import_tasks: cni.yml
   delegate_to: "{{ master_hosts[0] }}"
   run_once: true
-  register: check_role
-  failed_when: check_role.rc != 0 and check_role.rc != 1
-
-- name: "Create {{ cni.name }} cluster role"
-  when: check_role.rc != 0
-  shell: |
-    kubectl create --kubeconfig={{ kubeadmin_config }} \
-                   -f {{ network_dir }}/{{ cni.template.rbac }}
-  delegate_to: "{{ master_hosts[0] }}"
-  run_once: true
-  register: create_role
-
-- name: "Check {{ cni.name }} daemonset is working"
-  shell: |
-    kubectl --kubeconfig={{ kubeadmin_config }} \
-            get ds --all-namespaces | grep {{ cni.name }}
-  delegate_to: "{{ master_hosts[0] }}"
-  run_once: true
-  register: check_net
-  failed_when: check_net.rc != 0 and check_net.rc != 1
-
-- name: "Create {{ cni.name }} network daemonset"
-  when: check_net.rc != 0
-  shell: |
-    kubectl create --kubeconfig={{ kubeadmin_config }} \
-                   -f {{ network_dir }}/{{ cni.template.ds }}
-  delegate_to: "{{ master_hosts[0] }}"
-  run_once: true
-
