--- a/roles/prerequisite/tasks/offline.yml
+++ b/roles/prerequisite/tasks/offline.yml
@@ -8,8 +8,8 @@
     dest: "{{ rpm_dir }}"
     checksum: yes
   with_items:
-    - {{ docker_rpms_dir }}
-    - {{ rsync_rpms_dir }}
+    - "{{ docker_rpms_dir }}"
+    - "{{ rsync_rpms_dir }}"
 
 - name: Get the list of rpms
   command: "ls {{ rpm_dir }}"
@@ -21,5 +21,5 @@
   yum:
     name: "{{ item }}"
     state: present
-  with_items: rpm_list.stdout_lines
+  with_items: "{{ rpm_list.stdout_lines }}"
 
