--- a/roles/candidate/tasks/main.yml
+++ b/roles/candidate/tasks/main.yml
@@ -1,7 +1,5 @@
 ---
 - name: Deploy the master candidates
   import_tasks: candidate.yml
-  when:
-    - master_hosts | length > 1
-    - inventory_hostname != master_hosts[0]
+  when: inventory_hostname != master_hosts[0]
 
